# learn-langchain

./: .env.example  pyproject.toml
src/: app.py
src/ai/: __init__.py  models.py
src/data/: test_data.json
src/examples/: __init__.py  agent.py  chatbot_with_context.py  classification.py  extraction.py  prompt_and_parser.py  rag_1.py  rag_2.py  semantic_search.py  summary.py
src/parser/: __init__.py  review_parser.py
src/prompt_template/: __init__.py  templates.py
